@@ -22,35 +22,6 @@ directed and undirected graphs.
 [![CRAN downloads](http://cranlogs.r-pkg.org/badges/grand-total/gmat)](http://cran.r-project.org/package=gmat)
 [![CRAN status](http://www.r-pkg.org/badges/version/gmat)](http://cran.r-project.org/package=gmat)
 
-This package implements the methods described in the papers:
-
-- Córdoba, I., Varando, G., Bielza, C. and Larrañaga, P. A partial orthogonalization method for simulating covariance and concentration graph matrices, Proceedings of Machine Learning Research (PGM 2018), vol. 72, pp. 61 - 72, 2018a.
-- Córdoba I., Varando G., Bielza C., Larrañaga P. A fast
-Metropolis-Hastings method for generating random correlation matrices. Lecture Notes in
-Computer Science (IDEAL 2018), vol 11314, pp. 117-124, 2018b.
-- Pourahmadi, M., Wang, X. Distribution of random correlation matrices:
-Hyperspherical parameterization of the Cholesky factor, Statistics &
-Probability Letters, 106:5-12, 2015.
-
-### Simulation constrained to undirected graph models
-
-It is governed by two main functions, `port` and `diagdom`, which take as input an undirected
-graph structure `ug` and a sample size `N`, and generates `N`
-covariance/concentration matrices subject to the zeros imposed by the undirected
-graph structure `ug`.
-
-The sample is generated by `port` with the method described in Córdoba et al.
-(2018a). The classical diagonal dominance
-method is the one used by function `diagdom`.
-
-### Simulation constrained to acyclic digraph models
-
-The function `rgbn_chol` implements the Metropolis-Hastings
-algorithm described in the Córdoba et al. (2018b), while `rgbn_polar`
-implements the polar parametrization method by Pouhramadi and Wang (2015). Both
-methods are described for correlation matrices, but have been adapted for
-allowing also an input acyclic digraph.
-
 ## Installation
 
 The package is available on `CRAN`, to get the latest stable version use:
@@ -58,7 +29,7 @@ The package is available on `CRAN`, to get the latest stable version use:
 install.packages("gmat")
 ```
 The current version on `CRAN` only includes the methods for undirected graph
-models (Córdoba et al., 2018a).
+models.
 
 Alternatively, using the R package `devtools` one may install the development version:
 ```{r gh-installation, eval = FALSE}
