@@ -6,22 +6,6 @@ An R package for simulating positive definite matrices constrained by acyclic di
 
 [![Build Status](https://travis-ci.org/irenecrsn/gmat.svg?branch=master)](https://travis-ci.org/irenecrsn/gmat) [![CRAN downloads](http://cranlogs.r-pkg.org/badges/grand-total/gmat)](http://cran.r-project.org/package=gmat) [![CRAN status](http://www.r-pkg.org/badges/version/gmat)](http://cran.r-project.org/package=gmat)
 
-This package implements the methods described in the papers:
-
--   Córdoba, I., Varando, G., Bielza, C. and Larrañaga, P. A partial orthogonalization method for simulating covariance and concentration graph matrices, Proceedings of Machine Learning Research (PGM 2018), vol. 72, pp. 61 - 72, 2018a.
--   Córdoba I., Varando G., Bielza C., Larrañaga P. A fast Metropolis-Hastings method for generating random correlation matrices. Lecture Notes in Computer Science (IDEAL 2018), vol 11314, pp. 117-124, 2018b.
--   Pourahmadi, M., Wang, X. Distribution of random correlation matrices: Hyperspherical parameterization of the Cholesky factor, Statistics & Probability Letters, 106:5-12, 2015.
-
-### Simulation constrained to undirected graph models
-
-It is governed by two main functions, `port` and `diagdom`, which take as input an undirected graph structure `ug` and a sample size `N`, and generates `N` covariance/concentration matrices subject to the zeros imposed by the undirected graph structure `ug`.
-
-The sample is generated by `port` with the method described in Córdoba et al. (2018a). The classical diagonal dominance method is the one used by function `diagdom`.
-
-### Simulation constrained to acyclic digraph models
-
-The function `rgbn_chol` implements the Metropolis-Hastings algorithm described in the Córdoba et al. (2018b), while `rgbn_polar` implements the polar parametrization method by Pouhramadi and Wang (2015). Both methods are described for correlation matrices, but have been adapted for allowing also an input acyclic digraph.
-
 Installation
 ------------
 
@@ -31,7 +15,7 @@ The package is available on `CRAN`, to get the latest stable version use:
 install.packages("gmat")
 ```
 
-The current version on `CRAN` only includes the methods for undirected graph models (Córdoba et al., 2018a).
+The current version on `CRAN` only includes the methods for undirected graph models.
 
 Alternatively, using the R package `devtools` one may install the development version:
 
@@ -54,23 +38,23 @@ matrices
 #> , , 1
 #> 
 #>           [,1]      [,2]      [,3]
-#> [1,] 1.0269390 0.6705653 0.0000000
-#> [2,] 0.6705653 1.6862616 0.0000000
-#> [3,] 0.0000000 0.0000000 0.0048852
+#> [1,] 0.9742306 0.0000000 0.2382255
+#> [2,] 0.0000000 0.0174842 0.0458809
+#> [3,] 0.2382255 0.0458809 0.4161402
 #> 
 #> , , 2
 #> 
-#>          [,1]     [,2]      [,3]
-#> [1,] 1.044964 1.162179 0.0000000
-#> [2,] 1.162179 1.595584 0.0000000
-#> [3,] 0.000000 0.000000 0.5208406
+#>          [,1]       [,2]       [,3]
+#> [1,] 1.315333  0.0000000  1.0398587
+#> [2,] 0.000000  0.0975722 -0.0574187
+#> [3,] 1.039859 -0.0574187  0.9387271
 #> 
 #> , , 3
 #> 
 #>           [,1]      [,2]      [,3]
-#> [1,] 0.1998933 0.2059904 0.0000000
-#> [2,] 0.2059904 1.3606582 0.0000000
-#> [3,] 0.0000000 0.0000000 0.3093177
+#> [1,] 1.5970788 0.0000000 0.8978575
+#> [2,] 0.0000000 0.1401653 0.0450929
+#> [3,] 0.8978575 0.0450929 0.5553658
 ```
 
 We apprieciate how the zero pattern is shared by all of the simulated matrices. The return value is an array, and so the individual matrices can be accessed as `matrices[, , n]`, where `n` is the index of the matrix we want to retrieve from the sample, ranging from `1` to `N`.
